--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.anatideo.challenge.teads">
 
     <application
-        android:name=".presentation.application.AppApplication"
+        android:name=".presentation.base.AppApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
