--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.anatideo.challenge.teads.utils.HiltTestRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -60,17 +60,22 @@ dependencies {
     implementation("androidx.room:room-runtime:2.3.0")
     kapt "androidx.room:room-compiler:2.3.0"
 
-    // Dependency injection
-    implementation 'com.google.dagger:hilt-android:2.28-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    // dependency injection
+    implementation 'com.google.dagger:hilt-android:2.37'
+    kapt 'com.google.dagger:hilt-android-compiler:2.37'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     // testing
+    implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'junit:junit:4.+'
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.37"
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.37'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.0-alpha08'
 }
